'navbar_is_done'

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 						<div class="col-md-9 col-sm-8">
 							<div class="hd-lft">
 								<ul>
-									<li><i class="fa fa-comment-o"></i> 24x7 live Support</li>
+									<li><i class="fa fa-comment-o"></i>Call us today</li>
 									<li><i class="fa fa-phone"></i>(888) 010203-4567</li>
 									<li><i class="fa fa-comment"></i>Live Chat</li>
 								</ul>
@@ -67,7 +67,7 @@
 						</div>	
 						<div class="col-md-3 col-sm-4">	
 							<div class="hd-rgt">
-								<a href="#">Make An Appointment</a>
+								<a href="#">example@mail.com</a>
 							</div>				
 						</div>					
 					</div>
@@ -87,14 +87,9 @@
 								<div class="menu">
 									<nav id="main-menu" class="main-menu">
 										<ul>
-											<li class="active"><a href="index.html">Home</a></li>										 
-											<li><a href="project-3-column.html">project<i class="fa fa-angle-down"></i></a>
-												<ul>
-													<li><a href="project-3-column.html">project 3 column</a></li>
-													<li><a href="project-4-column.html">project 4 column</a></li>
-												</ul>
-											</li> 											
-											<li><a href="service-1.html">Service<i class="fa fa-angle-down"></i></a>
+											<li class="active css-border"><a href="index.html">About us</a></li>
+											<li class="css-border"><a href="about.html">Bankers</a></li>
+											<li class="css-border"><a href="service-1.html">Home owners<i class="fa fa-angle-down"></i></a>
 												<ul>
 													<li><a href="service-1.html">Service 1</a></li>
 													<li><a href="service-2.html">Service 2</a></li>
@@ -102,17 +97,7 @@
 													<li><a href="service-details-2.html">Service details 2</a></li>
 												</ul>
 											</li> 						
-											<li><a href="about.html">About</a></li>								
-											<li><a href="employees.html">employees</a></li>								
-											<li><a href="blog-classic.html">Blog<i class="fa fa-angle-down"></i></a>
-												<ul>
-													<li><a href="blog-classic.html">Blog classic</a></li>
-													<li><a href="blog-3-column.html">Blog 3 column</a></li>
-													<li><a href="blog-2-column-sidebar.html">Blog column & sidebar</a></li>
-													<li><a href="blog-details.html">Blog Details</a></li>
-												</ul>								
-											</li>
-											<li><a href="contact.html">Contact Us</a></li>
+											<li class="css-border"><a href="employees.html">Contact us</a></li>
 										</ul>
 									</nav>
 									<div class="menu-icon">	
@@ -152,11 +137,11 @@
 						</ul>
 					</div>
 				</div>
-			</div>			
+			</div>
 			<div class="single-slide" style="background-image:url(img/slide1.jpg);">
 				<div class="slider-overlay"></div>
-				<div class="slider-text">						
-					<div class="slider-wraper">					
+				<div class="slider-text">
+					<div class="slider-wraper">
 						<h1>We Provide <span>Verified & Secured</span> Service</h1>
 						<p>Lorem ipsum dolor sit amet, ligula magna at etiam aliquip venenatis. Vitae sit felis donec, suscipit tortor et sapien donec ac nec. Nam vel eu amet, nisl imperdiet nec ad morbi, sodales ipsum, consequat purus vitae integer maecenas.</p>
 						<ul>
@@ -165,7 +150,7 @@
 						</ul>
 					</div>
 				</div>
-			</div>																
+			</div>
 		</div>	
 	</div>
 	<!-- Slider Section End -->	
