--- a/about.html
+++ b/about.html
@@ -53,26 +53,26 @@
 		<!-- Main Menu Start -->
 		<div class="hd-style1">
 			<!-- Header Top Start -->
-			<div class="hd-sec">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-9 col-sm-8">
-							<div class="hd-lft">
-								<ul>
-									<li><i class="fa fa-comment-o"></i> 24x7 live Support</li>
-									<li><i class="fa fa-phone"></i>(888) 010203-4567</li>
-									<li><i class="fa fa-comment"></i>Live Chat</li>
-								</ul>
-							</div>	
-						</div>	
-						<div class="col-md-3 col-sm-4">	
-							<div class="hd-rgt">
-								<a href="#">Make An Appointment</a>
-							</div>				
-						</div>					
-					</div>
-				</div>
-			</div>
+            <div class="hd-sec">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-9 col-sm-8">
+                            <div class="hd-lft">
+                                <ul>
+                                    <li><i class="fa fa-comment-o"></i>Call us today</li>
+                                    <li><i class="fa fa-phone"></i>(888) 010203-4567</li>
+                                    <li><i class="fa fa-comment"></i>Live Chat</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-4">
+                            <div class="hd-rgt">
+                                <a href="#">example@mail.com</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
 			<!-- Header Top End -->			
 			<div class="mnmenu-sec">
 				<div class="container">
@@ -83,50 +83,38 @@
 									<a href="index.html"><img src="img/logo2.png" alt=""/></a>
 								</div>
 							</div>
-							<div class="col-md-9">		
-								<div class="menu">
-									<nav id="main-menu" class="main-menu">
-										<ul>
-											<li class="active"><a href="index.html">Home</a></li>									 
-											<li><a href="project-3-column.html">project<i class="fa fa-angle-down"></i></a>
-												<ul>
-													<li><a href="project-3-column.html">project 3 column</a></li>
-													<li><a href="project-4-column.html">project 4 column</a></li>
-												</ul>
-											</li> 											
-											<li><a href="service-1.html">Service<i class="fa fa-angle-down"></i></a>
-												<ul>
-													<li><a href="service-1.html">Service 1</a></li>
-													<li><a href="service-2.html">Service 2</a></li>
-													<li><a href="service-details-1.html">Service details 1</a></li>
-													<li><a href="service-details-2.html">Service details 2</a></li>
-												</ul>
-											</li> 						
-											<li><a href="about.html">About</a></li>								
-											<li><a href="employees.html">employees</a></li>								
-											<li><a href="blog-classic.html">Blog<i class="fa fa-angle-down"></i></a>
-												<ul>
-													<li><a href="blog-classic.html">Blog classic</a></li>
-													<li><a href="blog-3-column.html">Blog 3 column</a></li>
-													<li><a href="blog-2-column-sidebar.html">Blog column & sidebar</a></li>
-													<li><a href="blog-details.html">Blog Details</a></li>
-												</ul>								
-											</li>
-											<li><a href="contact.html">Contact Us</a></li>
-										</ul>
-									</nav>
-									<div class="menu-icon">	
-										<div class="site-search">	
-											<i class="fa fa-search"></i>
-											<div class="search-forum">
-												<form action="#">
-													<input placeholder="Search For Site" type="text">
-													<input type="submit" value="Go"/>
-												</form>							
-											</div>							
-										</div>
-									</div>									
-								</div>						
+							<div class="col-md-9">
+                                <div class="menu">
+                                    <nav id="main-menu" class="main-menu">
+                                        <ul>
+                                            <li class="active css-border"><a href="about.html">About us</a></li>
+                                            <li class="css-border"><a href="bankers.html">Bankers</a></li>
+                                            <li class="css-border"><a href="home-owners.html">Home owners<i class="fa fa-angle-down"></i></a>
+                                                <ul>
+                                                    <li><a href="service-1.html">Why Title Insurance?1</a></li>
+                                                    <li><a href="service-2.html">Closing Process</a></li>
+                                                    <li><a href="service-details-1.html">Closing Costs Explained</a></li>
+                                                    <li><a href="service-details-2.html">Real Estate Resources</a></li>
+                                                    <li><a href="service-details-1.html">What is ALTA?</a></li>
+                                                    <li><a href="service-details-2.html">Test Your Knowledge</a></li>
+                                                    <li><a href="service-details-1.html">Real Estate Glossary</a></li>
+                                                </ul>
+                                            </li>
+                                            <li class="css-border"><a href="contact.html">Contact us</a></li>
+                                        </ul>
+                                    </nav>
+                                    <div class="menu-icon">
+                                        <div class="site-search">
+                                            <i class="fa fa-search"></i>
+                                            <div class="search-forum">
+                                                <form action="#">
+                                                    <input placeholder="Search For Site" type="text">
+                                                    <input type="submit" value="Go"/>
+                                                </form>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
 							</div>
 						</div>
 					</div>
@@ -144,7 +132,7 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="page-heading">
-						<h1>About Page</h1>
+						<h1>Our Mission is to bring you the very best in Title Insurance and Settlement Solutions</h1>
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li><a href="">About Us</a></li>
@@ -164,8 +152,19 @@
 					<div class="about-desc">
 						<div class="sec-title">
 							<h1><span>About </span>Our Company</h1>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. </p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.Lorem ipsum dolor sit amet, consectetur adipiscing elit, </p>						
+							<p>Welcome and thank you for visiting our site. Atlas Title, Inc. is excited to bring you the very best in Title Insurance and Settlement services.
+								We are committed to providing a superior value to our clients while maintaining integrity, honesty, and incomparable customer service.
+								Dedicated client representatives – providing one-on-one support to our clients. The flexibility we give to our customers along with the years
+								of experience our management team provides. These factors give Atlas the ability to overcome obstacles and to deliver on time closings and are key
+								elements that keep our clients coming back to us at Atlas. Our company is completely paperless, utilizing centralized processing and
+								internal data source plants, which gives our customers access to status information 24/7.</p>
+							<p>Mission Statement
+								<br>
+								We at Atlas Title are committed to providing quality real estate title, settlement & escrow services to our clients with experience, integrity & flexibility.
+								<br>
+								We at Atlas Title are committed to helping our team members thrive by providing ongoing training, education and coaching.
+								<br>
+								We at Atlas Title are committed to giving back to our community through the donation of our gift of time, talent and financial support</p>
 						</div>	
 						<div class="about-countup">
 							<div class="counting-inner">
