--- a/bankers.html
+++ b/bankers.html
@@ -59,17 +59,17 @@
 						<div class="col-md-9 col-sm-8">
 							<div class="hd-lft">
 								<ul>
-									<li><i class="fa fa-comment-o"></i> 24x7 live Support</li>
+									<li><i class="fa fa-comment-o"></i>Call us today</li>
 									<li><i class="fa fa-phone"></i>(888) 010203-4567</li>
 									<li><i class="fa fa-comment"></i>Live Chat</li>
 								</ul>
-							</div>	
-						</div>	
-						<div class="col-md-3 col-sm-4">	
+							</div>
+						</div>
+						<div class="col-md-3 col-sm-4">
 							<div class="hd-rgt">
-								<a href="#">Make An Appointment</a>
-							</div>				
-						</div>					
+								<a href="#">example@mail.com</a>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -87,32 +87,20 @@
 								<div class="menu">
 									<nav id="main-menu" class="main-menu">
 										<ul>
-											<li class="active"><a href="index.html">Home</a></li>										 
-											<li><a href="project-3-column.html">project<i class="fa fa-angle-down"></i></a>
+											<li class="css-border"><a href="about.html">About us</a></li>
+											<li class="active css-border"><a href="bankers.html">Bankers</a></li>
+											<li class="css-border"><a href="home-owners.html">Home owners<i class="fa fa-angle-down"></i></a>
 												<ul>
-													<li><a href="project-3-column.html">project 3 column</a></li>
-													<li><a href="project-4-column.html">project 4 column</a></li>
+													<li><a href="service-1.html">Why Title Insurance?1</a></li>
+													<li><a href="service-2.html">Closing Process</a></li>
+													<li><a href="service-details-1.html">Closing Costs Explained</a></li>
+													<li><a href="service-details-2.html">Real Estate Resources</a></li>
+													<li><a href="service-details-1.html">What is ALTA?</a></li>
+													<li><a href="service-details-2.html">Test Your Knowledge</a></li>
+													<li><a href="service-details-1.html">Real Estate Glossary</a></li>
 												</ul>
-											</li> 											
-											<li><a href="service-1.html">Service<i class="fa fa-angle-down"></i></a>
-												<ul>
-													<li><a href="service-1.html">Service 1</a></li>
-													<li><a href="service-2.html">Service 2</a></li>
-													<li><a href="service-details-1.html">Service details 1</a></li>
-													<li><a href="service-details-2.html">Service details 2</a></li>
-												</ul>
-											</li> 						
-											<li><a href="about.html">About</a></li>								
-											<li><a href="employees.html">employees</a></li>								
-											<li><a href="blog-classic.html">Blog<i class="fa fa-angle-down"></i></a>
-												<ul>
-													<li><a href="blog-classic.html">Blog classic</a></li>
-													<li><a href="blog-3-column.html">Blog 3 column</a></li>
-													<li><a href="blog-2-column-sidebar.html">Blog column & sidebar</a></li>
-													<li><a href="blog-details.html">Blog Details</a></li>
-												</ul>								
 											</li>
-											<li><a href="contact.html">Contact Us</a></li>
+											<li class="css-border"><a href="contact.html">Contact us</a></li>
 										</ul>
 									</nav>
 									<div class="menu-icon">	
@@ -155,189 +143,115 @@
 		</div>
 	</div>
 	<!-- Page Heading Section End -->
-	
-	<!-- Team Section Start -->		
-	<div class="team-sec pt-100 pb-70">	
-		<div class="container">		
-			<div class="row">		
-				<div class="col-md-3 col-sm-6 col-xs-12">
-					<div class="team-member">
-						<div class="team-thumb wow slideInUp"  data-wow-duration="1000ms" data-wow-delay="330ms">
-							<img src="img/tm.jpg" alt=""/>
-							<div class="team-overlay">
-								<ul>
-									<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-									<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-									<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-									<li><a href="#"><i class="fa fa-google"></i></a></li>
-									<li><a href="#"><i class="fa fa-skype"></i></a></li>
-								</ul>							
-							</div>							
-						</div>
-						<h2>Gabriella</h2>
-						<h3>Window Cleaner</h3>						
-					</div>
-				</div>
-				<div class="col-md-3 col-sm-6 col-xs-12">
-					<div class="team-member">
-						<div class="team-thumb wow slideInUp"  data-wow-duration="1000ms" data-wow-delay="340ms">
-							<img src="img/tm2.jpg" alt=""/>
-							<div class="team-overlay">
-								<ul>
-									<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-									<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-									<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-									<li><a href="#"><i class="fa fa-google"></i></a></li>
-									<li><a href="#"><i class="fa fa-skype"></i></a></li>
-								</ul>							
-							</div>							
-						</div>
-						<h2>Brianna</h2>
-						<h3>Apartment Cleaner</h3>						
-					</div>
-				</div>					
-				<div class="col-md-3 col-sm-6 col-xs-12">
-					<div class="team-member">
-						<div class="team-thumb wow slideInUp"  data-wow-duration="1000ms" data-wow-delay="340ms">
-							<img src="img/tm3.jpg" alt=""/>
-							<div class="team-overlay">
-								<ul>
-									<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-									<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-									<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-									<li><a href="#"><i class="fa fa-google"></i></a></li>
-									<li><a href="#"><i class="fa fa-skype"></i></a></li>
-								</ul>							
-							</div>							
-						</div>
-						<h2>Mackenzie</h2>
-						<h3>House Cleaner</h3>						
-					</div>
-				</div>	
-				<div class="col-md-3 col-sm-6 col-xs-12">
-					<div class="team-member">
-						<div class="team-thumb wow slideInUp"  data-wow-duration="1000ms" data-wow-delay="350ms">
-							<img src="img/tm4.jpg" alt=""/>
-							<div class="team-overlay">
-								<ul>
-									<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-									<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-									<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-									<li><a href="#"><i class="fa fa-google"></i></a></li>
-									<li><a href="#"><i class="fa fa-skype"></i></a></li>
-								</ul>							
-							</div>							
-						</div>
-						<h2>Amelia</h2>
-						<h3>Window Cleaner</h3>						
-					</div>
-				</div>				
-				<div class="col-md-3 col-sm-6 col-xs-12">
-					<div class="team-member">
-						<div class="team-thumb wow slideInUp"  data-wow-duration="1000ms" data-wow-delay="330ms">
-							<img src="img/tm.jpg" alt=""/>
-							<div class="team-overlay">
-								<ul>
-									<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-									<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-									<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-									<li><a href="#"><i class="fa fa-google"></i></a></li>
-									<li><a href="#"><i class="fa fa-skype"></i></a></li>
-								</ul>							
-							</div>							
-						</div>
-						<h2>Gabriella</h2>
-						<h3>Window Cleaner</h3>						
-					</div>
-				</div>
-				<div class="col-md-3 col-sm-6 col-xs-12">
-					<div class="team-member">
-						<div class="team-thumb wow slideInUp"  data-wow-duration="1000ms" data-wow-delay="340ms">
-							<img src="img/tm2.jpg" alt=""/>
-							<div class="team-overlay">
-								<ul>
-									<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-									<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-									<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-									<li><a href="#"><i class="fa fa-google"></i></a></li>
-									<li><a href="#"><i class="fa fa-skype"></i></a></li>
-								</ul>							
-							</div>							
-						</div>
-						<h2>Brianna</h2>
-						<h3>Apartment Cleaner</h3>						
-					</div>
-				</div>					
-				<div class="col-md-3 col-sm-6 col-xs-12">
-					<div class="team-member">
-						<div class="team-thumb wow slideInUp"  data-wow-duration="1000ms" data-wow-delay="340ms">
-							<img src="img/tm3.jpg" alt=""/>
-							<div class="team-overlay">
-								<ul>
-									<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-									<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-									<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-									<li><a href="#"><i class="fa fa-google"></i></a></li>
-									<li><a href="#"><i class="fa fa-skype"></i></a></li>
-								</ul>							
-							</div>							
-						</div>
-						<h2>Mackenzie</h2>
-						<h3>House Cleaner</h3>						
-					</div>
-				</div>	
-				<div class="col-md-3 col-sm-6 col-xs-12">
-					<div class="team-member">
-						<div class="team-thumb wow slideInUp"  data-wow-duration="1000ms" data-wow-delay="350ms">
-							<img src="img/tm4.jpg" alt=""/>
-							<div class="team-overlay">
-								<ul>
-									<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-									<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-									<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-									<li><a href="#"><i class="fa fa-google"></i></a></li>
-									<li><a href="#"><i class="fa fa-skype"></i></a></li>
-								</ul>							
-							</div>							
-						</div>
-						<h2>Amelia</h2>
-						<h3>Window Cleaner</h3>						
-					</div>
-				</div>																			
-			</div>			     
-		</div>	
-	</div>	
-	<!-- Team Section End -->
 
-	<!-- All Patner Section Start -->
-	<div class="all-patner-sec">
+	<div class="service2-sec pt-100 pb-100">
 		<div class="container">
-			<div class="row">				
-				<div class="all-patner">
-					<div class="single-patner">
-						<img src="img/patner1.png" alt=""/>
-					</div>					
-					<div class="single-patner">
-						<img src="img/patner2.png" alt=""/>
-					</div>					
-					<div class="single-patner">
-						<img src="img/patner3.png" alt=""/>
-					</div>					
-					<div class="single-patner">
-						<img src="img/patner4.png" alt=""/>
-					</div>					
-					<div class="single-patner">
-						<img src="img/patner3.png" alt=""/>
-					</div>					
-					<div class="single-patner">
-						<img src="img/patner2.png" alt=""/>
+			<div class="row">
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+					<div class="sec-title">
+						<h1><span>Our</span> Service</h1>
+						<p>Lorem ipsum dolor sit amet, pellentesque enim lorem quis vivamus amet.</p>
 					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="service2-item">
+					<div class="col-md-12 col-sm-6">
+						<div class="service2-inner">
+							<div class="media">
+								<div class="media-left">
+									<div class="service2-icon">
+										<span class="fa fa-magic fa-3x"></span>
+									</div>
+								</div>
+								<div class="media-body">
+									<div class="service2-details">
+										<h2><a href="service-details.html">We close 7 days a week, 6:00am to 10:00pm</a></h2>
+										<p>We understand that not everyone is able to schedule their closing during regular business hours. That’s why we work around your schedule</p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-12 col-sm-6">
+					<div class="service2-inner">
+						<div class="media">
+							<div class="media-left">
+								<div class="service2-icon">
+									<span class="fa fa-map-o fa-3x"></span>
+								</div>
+							</div>
+							<div class="media-body">
+								<div class="service2-details">
+									<h2><a href="service-details.html">We will close your loan wherever you would like</a></h2>
+									<p>With one of our states largest on-site closing staff you will be able to offer your clients that added convenience of closing in their: home, office, restaurant, anyway!</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+					<div class="col-md-12 col-sm-6">
+						<div class="service2-inner">
+							<div class="media">
+								<div class="media-left">
+									<div class="service2-icon">
+										<span class="fa fa-clock-o fa-3x"></span>
+									</div>
+								</div>
+								<div class="media-body">
+									<div class="service2-details">
+										<h2><a href="service-details.html">Never be turned down for a closing again</a></h2>
+										<p>If you have a clear to close package we can close the same day even if it’s the last day of the month.</p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-12 col-sm-6">
+						<div class="service2-inner">
+							<div class="media">
+								<div class="media-left">
+									<div class="service2-icon">
+										<span class="fa fa-flag fa-3x"></span>
+									</div>
+								</div>
+								<div class="media-body">
+									<div class="service2-details">
+										<h2><a href="service-details.html">Citywide is culturally diverse</a></h2>
+										<p>We have closers available who are fluent in Spanish and Lithuanian.</p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-12 col-sm-6">
+					<div class="service2-inner">
+						<div class="media">
+							<div class="media-left">
+								<div class="service2-icon">
+									<span class="fa fa-refresh fa-3x"></span>
+								</div>
+							</div>
+							<div class="media-body">
+								<div class="service2-details">
+									<h2><a href="service-details.html">Citywide provides exceptional title clearance</a></h2>
+									<p>We don’t just give you a number to call (like our competition); our unique and highly efficient team does the work for you. This service results in increased productivity of your operations.
+										<ul>
+											<li><span class="fa fa-circle-thin fa-1x"></span> Hold Harmless Letters</li>
+											<li><span class="fa fa-circle-thin fa-1x"></span> Estimate of Redemption for sold taxes</li>
+											<li><span class="fa fa-circle-thin fa-1x"></span> Difficult to get releases</li>
+										</ul>
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
 				</div>
 			</div>
 		</div>
 	</div>
-	<!-- All Patner Section End -->
-	
+	<!-- Service End -->
 	<!-- Footer Section Start -->
 	<footer>	
 		<!-- Footer Top Section Start -->
