--- a/home-owners.html
+++ b/home-owners.html
@@ -91,9 +91,9 @@
 											<li class="css-border"><a href="bankers.html">Bankers</a></li>
 											<li class="css-border"><a href="home-owners.html">Home owners<i class="fa fa-angle-down"></i></a>
 												<ul>
-													<li><a href="service-1.html">Why Title Insurance?1</a></li>
-													<li><a href="service-2.html">Closing Process</a></li>
-													<li><a href="service-details-1.html">Closing Costs Explained</a></li>
+													<li><a href="why-title-insurance.html">Why Title Insurance?1</a></li>
+													<li><a href="closing-process.html">Closing Process</a></li>
+													<li><a href="closing-cost-explained.html">Closing Costs Explained</a></li>
 													<li><a href="service-details-2.html">Real Estate Resources</a></li>
 													<li><a href="service-details-1.html">What is ALTA?</a></li>
 													<li><a href="service-details-2.html">Test Your Knowledge</a></li>
@@ -113,8 +113,8 @@
 												</form>
 											</div>
 										</div>
-									</div>									
-								</div>						
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -132,132 +132,76 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="page-heading">
-						<h1>Contact Us</h1>
+						<h1>Our Service</h1>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="">Contact Us</a></li>
+							<li><a href="">Our Service</a></li>
 						</ul>						
 					</div>					
 				</div>				
 			</div>
 		</div>
 	</div>
-	<!-- Page Heading Section End -->	
-	<!-- Contact Page Section Start -->
-	<div class="contact-page-sec pt-100 pb-100">
+	<!-- Page Heading Section End -->
+	
+	<!-- Happy Clients Start -->
+	<div class="about-sec pt-100 pb-100">
+		<div class="about-sec-overlay"></div>
 		<div class="container">
-			<div class="row">				
-				<div class="col-md-4">
-					<div class="contact-info">
-						<div class="contact-info-item">
-							<div class="contact-info-icon">
-								<img src="img/icon/phone-call.png" alt=""/>
+			<div class="row">
+				<div class="col-md-7">
+					<div class="about-desc">
+						<div class="sec-title">
+							<h1><span>Dear </span>Home Buyer</h1>
+							<p>Thank you for allowing us the opportunity to help guide you through your home buying process.
+								It can be very confusing, sometimes complicated, but it’s important to understand for you and your family.</p>
+							<p>The information in this handbook will educate and assist you with the following:
+								<ul>
+									<li><span class="fa fa-home fa-1x"></span> Help determine your wants and needs</li>
+									<li><span class="fa fa-home fa-1x"></span> Preview properties that meet your criteria</li>
+									<li><span class="fa fa-home fa-1x"></span> Steps of the buying process</li>
+									<li><span class="fa fa-home fa-1x"></span> Loan information</li>
+									<li><span class="fa fa-home fa-1x"></span> Writing, presenting and negotiating the offer</li>
+									<li><span class="fa fa-home fa-1x"></span> Explaining the escrow and title process</li>
+									<li><span class="fa fa-home fa-1x"></span> Physical inspection process</li>
+									<li><span class="fa fa-home	fa-1x"></span> Home warranties</li>
+								</ul>
+						</div>
+						<!--
+						<div class="about-countup">
+							<div class="counting-inner">
+								<div class="countup-text">
+									<h2 class="counter">250</h2>
+									<h4>Project Done</h4>
+								</div>
 							</div>
-							<div class="contact-info-text">
-								<h2>phone</h2>
-								<span>0123456789</span> 
-								<span>0987654321</span>
+							<div class="counting-inner">
+								<div class="countup-text">
+									<h2 class="counter">280</h2>
+									<h4>happy client</h4>
+								</div>
 							</div>
-						</div>						
-					</div>						
-					<div class="contact-info">
-						<div class="contact-info-item">
-							<div class="contact-info-icon">
-								<img src="img/icon/contact.png" alt=""/>
+							<div class="counting-inner">
+								<div class="countup-text">
+									<h2 class="counter">240</h2>
+									<h4>Our employees</h4>
+								</div>
 							</div>
-							<div class="contact-info-text">
-								<h2>e-mail</h2>
-								<span>yourmail@gmail.com</span> 
-								<span>demomail@gmail.com</span>
-							</div>
-						</div>						
-					</div>					
-					<div class="contact-info">
-						<div class="contact-info-item">
-							<div class="contact-info-icon">
-								<img src="img/icon/map-marker.png" alt=""/>
-							</div>
-							<div class="contact-info-text">
-								<h2>address</h2>
-								<span>united states california</span> 
-								<span>united states california</span>
-							</div>
-						</div>						
+						</div>
+						-->
 					</div>
 				</div>
-				<div class="col-md-8">
-					<div class="contact-field">
-						<h2>Write Your Message</h2>
-						<div class="col-md-6 col-sm-6 col-xs-12">
-							<div class="single-input-field">
-								<input placeholder="Full Name" type="text">
-							</div>
-						</div>							
-						<div class="col-md-6 col-sm-6 col-xs-12">
-							<div class="single-input-field">
-								<input placeholder="Your E-mail" type="email">
-							</div>
-						</div>							
-						<div class="col-md-6 col-sm-6 col-xs-12">
-							<div class="single-input-field">
-								<input placeholder="Phone" type="text">
-							</div>
-						</div>						
-						<div class="col-md-6 col-sm-6 col-xs-12">
-							<div class="select-arrow">
-								<select>
-									<option value="Select Your Service">Select Your Service</option>
-									<option value="floor clean">floor clean</option>
-									<option value="window clean">window clean</option>
-									<option value="House Clean">House Clean</option>
-									<option value="Carpet Clean">Carpet Clean</option>
-									<option value="Appartment Clean">Appartment Clean</option>
-								</select>
-							</div>
-						</div>						
-						<div class="col-md-12 message-input">
-							<div class="single-input-field">
-								<textarea placeholder="Message"></textarea>
-							</div>
-						</div>																				
-						<div class="single-input-fieldsbtn">
-							<input value="send now " type="submit">
-						</div>							
-					</div>				
+				<div class="col-md-5">
+					<div class="about-us-img">
+						<img src="img/atg-family.jpg" alt=""/>
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-	<!-- Contact Page Section End -->	
+	<!-- Happy Clients End -->
 
-	<!-- All Patner Section Start -->
-	<div class="all-patner-sec">
-		<div class="container">
-			<div class="row">				
-				<div class="all-patner">
-					<div class="single-patner">
-						<img src="img/patner1.png" alt=""/>
-					</div>					
-					<div class="single-patner">
-						<img src="img/patner2.png" alt=""/>
-					</div>					
-					<div class="single-patner">
-						<img src="img/patner3.png" alt=""/>
-					</div>					
-					<div class="single-patner">
-						<img src="img/patner4.png" alt=""/>
-					</div>					
-					<div class="single-patner">
-						<img src="img/patner3.png" alt=""/>
-					</div>					
-					<div class="single-patner">
-						<img src="img/patner2.png" alt=""/>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- All Patner Section End -->
+
 	
 	<!-- Footer Section Start -->
 	<footer>	
