--- a/index.html
+++ b/index.html
@@ -87,17 +87,20 @@
 								<div class="menu">
 									<nav id="main-menu" class="main-menu">
 										<ul>
-											<li class="active css-border"><a href="index.html">About us</a></li>
-											<li class="css-border"><a href="about.html">Bankers</a></li>
-											<li class="css-border"><a href="service-1.html">Home owners<i class="fa fa-angle-down"></i></a>
+											<li class="active css-border"><a href="about.html">About us</a></li>
+											<li class="css-border"><a href="bankers.html">Bankers</a></li>
+											<li class="css-border"><a href="home-owners.html">Home owners<i class="fa fa-angle-down"></i></a>
 												<ul>
-													<li><a href="service-1.html">Service 1</a></li>
-													<li><a href="service-2.html">Service 2</a></li>
-													<li><a href="service-details-1.html">Service details 1</a></li>
-													<li><a href="service-details-2.html">Service details 2</a></li>
+													<li><a href="why-title-insurance.html">Why Title Insurance?1</a></li>
+													<li><a href="service-2.html">Closing Process</a></li>
+													<li><a href="service-details-1.html">Closing Costs Explained</a></li>
+													<li><a href="service-details-2.html">Real Estate Resources</a></li>
+													<li><a href="service-details-1.html">What is ALTA?</a></li>
+													<li><a href="service-details-2.html">Test Your Knowledge</a></li>
+													<li><a href="service-details-1.html">Real Estate Glossary</a></li>
 												</ul>
 											</li> 						
-											<li class="css-border"><a href="employees.html">Contact us</a></li>
+											<li class="css-border"><a href="contact.html">Contact us</a></li>
 										</ul>
 									</nav>
 									<div class="menu-icon">	
@@ -129,11 +132,11 @@
 				<div class="slider-overlay"></div>
 				<div class="slider-text">					
 					<div class="slider-wraper">					
-						<h1>Welcome To Our <span>BClean</span></h1>
-						<p>Lorem ipsum dolor sit amet, ligula magna at etiam aliquip venenatis. Vitae sit felis donec, suscipit tortor et sapien donec ac nec. Nam vel eu amet, nisl imperdiet nec ad morbi, sodales ipsum, consequat purus vitae integer maecenas. Arcu sit, sit velit at ut eu phasellus</p>
+						<h1>Welcome To Our <span>Atlastitle</span></h1>
+						<p>You have a reasons. We have a solutions.</p>
 						<ul>
-							<li><a href="#">Read More</a></li>
-							<li><a href="#">Contact Us</a></li>
+							<li><a href="about.html">Read More</a></li>
+							<li><a href="contact.html">Contact Us</a></li>
 						</ul>
 					</div>
 				</div>
